--- a/src/css/App.css
+++ b/src/css/App.css
@@ -19,30 +19,32 @@
 @media (max-width: 560px) {
   .testimony-image {
     width: 13rem !important;
-    height: 18rem !important;
+    /* height: 18rem !important; */
     overflow-y: auto;
     object-fit: cover;
     /* margin-left: 10px; */
   }
   .testimony-text {
-    width: 10rem !important;
-    height: 18rem !important;
+    /* width: 10rem !important; */
+    /* height: 18rem !important; */
     overflow-y: auto;
     margin-top: 0px;
+    font-size: 8px;
     /* padding: 1px; */
     /* object-fit: cover; */
   }
 }
+
 @media (min-width: 560px) and (max-width: 1200px) {
   .testimony-image {
-    width: 18rem !important;
-    height: 15rem !important;
+    /* width: 18rem !important; */
+    /* height: 15rem !important; */
     overflow-y: auto;
     object-fit: cover;
   }
   .testimony-text {
-    width: 23rem !important;
-    height: 15rem !important;
+    /* width: 23rem !important; */
+    /* height: 15rem !important; */
     overflow-y: auto;
     margin-top: 3px;
     padding: 1px;
@@ -56,12 +58,12 @@
     /* object-fit: cover; */
   }
   .testimony-image {
-    width: 36rem !important;
+    /* width: 36rem !important; */
     height: 29rem !important;
     object-fit: cover;
   }
   .testimony-text {
-    width: 30rem !important;
+    /* width: 30rem !important; */
     height: 25rem !important;
     /* margin-right: 1px; */
     /* padding-right: 1px; */
